# Engine

./: .gitattributes  .gitignore  :w  ;  CMakeLists.txt  CMakePresets.json  README.md  mapmesh.mesh  meshtest.mesh  testmaterial.mat  world.ft
.cache/clangd/index/: application.c.5A66C438F80B721B.idx  application.h.2B10FB8BE31F8498.idx  base.h.87CBACBC4DF40194.idx  brush.c.C9DD1A5AD20E1B1B.idx  brush.h.D03E375C7AF1277F.idx  brush_render.c.62D5583F138B5C35.idx  brush_render.h.C61FAAF00432C415.idx  camera.c.E831E646C1E3C24C.idx  camera.c.FE5AC6F621E53D36.idx  camera.h.421DF0A9D1853947.idx  camera.h.6F88D0FA85AED45B.idx  collider.c.033048370B57F077.idx  collider.h.013607B3D6B63903.idx  concmd.h.8B7D669F94427830.idx  console.c.311BAF223270DA47.idx  console.h.A43D61A4EEBE0731.idx  consolegui.cpp.3019D61B11F6B1A4.idx  consolegui.h.72D4F22ACBB8DF2C.idx  cvar.c.5FD0FFF14DE8C423.idx  cvar.h.25D0A92E9A90CED8.idx  draw_list.c.AB13F1A95A97D6B9.idx  (+88 more)
Assets/Materials/: brickmaterial.mat  brushhover.mat  debugplane.mat  sigmundmaterial.mat  testmaterial.mat
Assets/Shaders/: defaultVert.vs  frag_lit.fs  frag_unlit.fs  vert_lit.vs  vert_unlit.vs
include/: application.h  headers.h  imgui_layer.h  inputbase.h  mem.h  state.h
include/console/: concmd.h  console.h  consolegui.h  cvar.h
include/editor/: brush.h  brush_render.h  bsp.h  csg.h  editor.h  editorcamera.h  editorcmd.h  editorentity.h  editorgui.h  editorgui_actions.h  editorinput.h  editorpanel.h  editorstate.h
include/log/: log.h
include/math/: mathlib.h
include/physics/: collider.h  physbody.h  rigidbody.h
include/player/: player.h  pmove.h
include/rendering/: batch.h  camera.h  draw_list.h  frustum.h  light.h  material.h  mesh.h  meshfile.h  render_commands.h  renderer.h  shader.h  text.h  texture.h
include/tools/: flagtool.h  parser.h
include/types/: types_base.h  types_vector.h
src/: application.c  imgui_layer.cpp  inputbase.c  main.c  mem.c
src/console/: console.c  consolegui.cpp  cvar.c
src/editor/: brush.c  brush_render.c  bsp.c  csg.c  editor.c  editorcamera.cpp  editorcmd.c  editorentity.c  editorgui.cpp  editorgui_actions.cpp
src/physics/: collider.c  physbody.c  rigidbody.c
src/player/: player.c  pmove.c
src/rendering/: camera.c  draw_list.c  frustrum.c  light.c  material.c  mesh.c  meshfile.c  render_commands.c  renderer.c  shader.c  text.c  texture.c
src/tools/: parser.c
src/types/: types_vector.c
